<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Order_Simulation">

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/Sorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toEndOf="@+id/home"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.502" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/TV_order"
            android:layout_width="300dp"
            android:layout_height="375dp"
            android:background="@color/colorPrimary"
            android:text="@string/data_order"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.504" />

        <Spinner
            android:id="@+id/train_order_time"
            android:layout_width="228dp"
            android:layout_height="25dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/TV_order"
            app:layout_constraintEnd_toEndOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toTopOf="@+id/TV_order"
            app:layout_constraintVertical_bias="0.1" />

        <Spinner
            android:id="@+id/spinner_start"
            android:layout_width="228dp"
            android:layout_height="25dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/TV_order"
            app:layout_constraintEnd_toEndOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toBottomOf="@+id/train_order_time"
            app:layout_constraintVertical_bias="0.01" />

        <Spinner
            android:id="@+id/spinner_end"
            android:layout_width="228dp"
            android:layout_height="25dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/TV_order"
            app:layout_constraintEnd_toEndOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toBottomOf="@+id/spinner_start"
            app:layout_constraintVertical_bias="0.01" />

        <Spinner
            android:id="@+id/spinner_seat"
            android:layout_width="228dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/TV_order"
            app:layout_constraintEnd_toEndOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toBottomOf="@+id/spinner_end"
            app:layout_constraintVertical_bias="0.01" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="228dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/TV_order"
            app:layout_constraintEnd_toEndOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toBottomOf="@+id/spinner_seat"
            app:layout_constraintVertical_bias="0.01" />

        <Spinner
            android:id="@+id/spinner_count"
            android:layout_width="228dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/TV_order"
            app:layout_constraintEnd_toEndOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toBottomOf="@+id/spinner_type"
            app:layout_constraintVertical_bias="0.01" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="39dp"
            android:layout_height="25dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/train_order_time"
            app:layout_constraintEnd_toEndOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toTopOf="@+id/train_order_time"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="39dp"
            android:layout_height="25dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_start"
            app:layout_constraintEnd_toEndOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toTopOf="@+id/spinner_start"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="39dp"
            android:layout_height="25dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_end"
            app:layout_constraintEnd_toEndOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toTopOf="@+id/spinner_end"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="39dp"
            android:layout_height="25dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_seat"
            app:layout_constraintEnd_toEndOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toTopOf="@+id/spinner_seat"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="39dp"
            android:layout_height="25dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_type"
            app:layout_constraintEnd_toEndOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toTopOf="@+id/spinner_type"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="39dp"
            android:layout_height="25dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_count"
            app:layout_constraintEnd_toEndOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toBottomOf="@+id/spinner_type"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <TextView
            android:id="@+id/ptime"
            android:layout_width="74dp"
            android:layout_height="25dp"
            android:text="TextView"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/TV_order"
            app:layout_constraintEnd_toEndOf="@+id/spinner_start"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toTopOf="@+id/TV_order"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/pmoney"
            android:layout_width="74dp"
            android:layout_height="25dp"
            android:text="TextView"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/TV_order"
            app:layout_constraintEnd_toEndOf="@+id/spinner_start"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/TV_order"
            app:layout_constraintTop_toTopOf="@+id/TV_order"
            app:layout_constraintVertical_bias="0.18" />

        <Button
            android:id="@+id/linepay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linepay"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/TV_order"
            app:layout_constraintEnd_toStartOf="@+id/TV_order"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/TV_order"
            app:layout_constraintTop_toTopOf="@+id/TV_order"
            app:layout_constraintVertical_bias="0.8"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>